syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.gentlehu.rpcdemo.grpc";

option java_outer_classname = "HelloWorldProto";

message HelloRequest {
  string message = 1;
}
message HelloResponse {
  string message = 1;
}

service HelloWorldService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}